# pico-rs-template

./: .cargo-generate-ignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  cargo-generate.toml  memory.x
.cargo/: config.toml
.github/: CODEOWNERS
app/: Cargo.toml
app/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
